@@ -43,6 +43,7 @@ import(IRanges)
 import(VariantAnnotation)
 importFrom(BiocGenerics,unstrand)
 importFrom(Biostrings,letterFrequency)
+importFrom(GenomeInfoDb,"seqlengths<-")
 importFrom(GenomeInfoDb,"seqlevels<-")
 importFrom(GenomeInfoDb,"seqlevelsStyle<-")
 importFrom(GenomeInfoDb,genomeStyles)
