@@ -15,6 +15,12 @@ option_list <- list(
     make_option(c("--targetwidth"), action = "store", type = "integer",
         default = formals(PureCN::preprocessIntervals)$average.target.width, 
         help = "Split large targets to approximately that size [default %default]"),
+    make_option(c("--mintargetwidth"), action = "store", type = "integer",
+        default = formals(PureCN::preprocessIntervals)$min.target.width, 
+        help = "Either resize or drop targets smaller than specified [default %default]"),
+    make_option(c("--smalltargets"), action = "store", type = "character",
+        default = formals(PureCN::preprocessIntervals)$small.targets[[2]], 
+        help = "Either 'resize' or 'drop' small targets [default %default]"),
     make_option(c("--offtargetwidth"), action = "store", type = "integer",
         default = formals(PureCN::preprocessIntervals)$average.off.target.width, 
         help = "Bin off-target regions to approximately that size [default %default]"),
@@ -127,6 +133,8 @@ min.mappability <- as.numeric(strsplit(opt$minmappability, ",")[[1]])
 outGC <- preprocessIntervals(intervals, reference.file,
     output.file = outfile, off.target = opt$offtarget,
     mappability = mappability, min.mappability = min.mappability,
+    min.target.width = opt$mintargetwidth,
+    small.targets = opt$smalltargets,
     average.off.target.width = opt$offtargetwidth,
     reptiming = reptiming, average.reptiming.width = opt$reptimingwidth,
     off.target.seqlevels = opt$offtargetseqlevels,
